trying out creating pages

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <ul id="NavBar">
                     <li><a href="About.html">About</a></li>
                     <li><a href="menu.html">Menu</a></li>
-                    <li><a href="Cart.html">Cart</a></li>
+                    <li><a href="Cart.html">Cart (<span class="cart-items">0</span>)</a></li>
                 </ul>
             </div>
         </header>
@@ -55,6 +55,9 @@ first in all that we do.  <a href="LearnMore.html"><strong>Learn More</strong></
         <hr>
         <p>@ 2021Bun Bun Bake Shop. All rights reserved.</p>
     </footer>
+
+    <script  src="main.js"></script>
+
 </body>
 
 </html>
